# jt-dockerfiles

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md
CLI_tools/ColonyGroundedSAM2/: Dockerfile  README.md  download_weights.sh
CLI_tools/Hashdeep/: Dockerfile  README.md
CLI_tools/PRO-barcodes/: Dockerfile  README.md
CLI_tools/PlasAnn_CLI/: Dockerfile  README.md  run_plasann.sh
CLI_tools/TDFPS/: Dockerfile  README.md
CLI_tools/Vulcan/: Dockerfile  README.md
CLI_tools/askcos2xlsx/: Dockerfile  README.md  requirements.txt  run.sh  treejson_to_xlsx.py
CLI_tools/gb2gff_fna/: Dockerfile  README.md  gb2gff_fna.py  run_gb2gff_fna.sh
CLI_tools/jt_escher/: Dockerfile  README.md  pyproject.toml
CLI_tools/jt_escher/src/escher_cli/: cli.py  data_loader.py
CLI_tools/ml_colonies/: Dockerfile  README.md
CLI_tools/xlsx2csv/: Dockerfile  README.md
Dev_containers/DEP_jt_quarto/: Dockerfile  README.md  devcontainer.json  requirements.txt
Dev_containers/jt_FBA/: README.md  devcontainer.json  example_bottleneck_analysis.ipynb  example_escher_map_expansion.ipynb  post-create.sh
Dev_containers/jt_dna/: Dockerfile  README.md  devcontainer.json
Dev_containers/jt_latex/: .latexmkrc  README.md  devcontainer.json
Dev_containers/jt_quarto/: Dockerfile  README.md  devcontainer.json  dpcr_analysis.qmd  example.qmd
Scripts/RCR_oriGuard/: Dockerfile
Services/Plasmidsaurus_AutoDownloader/: SETUP.md  plasmidsaurus_autofetch.py
Standalone_HTML/assembly_filter/: README.md  assembly_filter.html  assembly_filter_with_reference.html  (+1 more)
Webservers/Ribbon/: Dockerfile  (+1 more)
(+42 files in other folders)
